revise the note

--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
                         <br>
                         <strong>Keyboard:</strong> Move by "W/A/S/D", look around by "I/J/K/L".
                         <br>
-                        <em>Note: Due to file size limitations of supplementary materials, we only provide interactive screen recordings here.</em>
+                        <em>Note: Due to the large file size of single-frame 3D Gaussians, the webpage cannot support real-time rendering. We only provide interactive screen recordings here.</em>
                     </figcaption>
                 </figure>
 
