revise the title

--- a/index.html
+++ b/index.html
@@ -342,9 +342,9 @@
             <div class="container">
                 <div class="columns is-centered">
                     <div class="column has-text-centered">
-                        <h1 class="title is-1 publication-title">
-                            <img src="assets/icon/PerpetualWonder.png" alt="PerpetualWonder" style="height: 1.8em; vertical-align: middle; margin-right: 0.5rem;">
-                            PerpetualWonder:
+                        <h1 class="title is-1 publication-title" style="display: flex; align-items: center; justify-content: center;">
+                            <img src="assets/icon/PerpetualWonder.png" alt="PerpetualWonder" style="height: 1.5em; margin-right: 0.5rem;">
+                            <span style="font-size: 1.8em;">PerpetualWonder:</span>
                         </h1>
                         <p class="title is-3" style="margin-top: 0.5rem;">Long-Horizon Action-Conditioned 4D Scene Generation</p>
                         <div class="author-text">
