update the link

--- a/index.html
+++ b/index.html
@@ -386,11 +386,11 @@
                         
                         <!-- Resource buttons -->
                         <div style="margin-top: 0.8rem; display: flex; justify-content: center; gap: 1rem; flex-wrap: wrap;">
-                            <a href="#" class="resource-button">
+                            <a href="https://arxiv.org/abs/2602.04876" class="resource-button">
                                 <i class="fas fa-file-alt" style="margin-right: 0.5rem;"></i>
                                 Paper
                             </a>
-                            <a href="#" class="resource-button">
+                            <a href="https://github.com/JohnZhan2023/PerpetualWonder" class="resource-button">
                                 <i class="fab fa-github" style="margin-right: 0.5rem;"></i>
                                 Code
                             </a>
@@ -796,6 +796,21 @@
         </div>
     </section>
     <!--/ Overview -->
+
+    <section class="section" id="BibTeX">
+        <div class="container is-max-desktop content">
+            <h2 class="title">BibTeX</h2>
+            <pre><code>@misc{zhan2026perpetualwonderlonghorizonactionconditioned4d, 
+       title={PerpetualWonder: Long-Horizon Action-Conditioned 4D Scene Generation}, 
+       author={Jiahao Zhan and Zizhang Li and Hong-Xing Yu and Jiajun Wu}, 
+       year={2026}, 
+       eprint={2602.04876}, 
+       archivePrefix={arXiv}, 
+       primaryClass={cs.CV}, 
+       url={https://arxiv.org/abs/2602.04876}, 
+ }</code></pre>
+        </div>
+    </section>
 
     <div style="margin-bottom: 5rem;"></div>
 
